Table User {
  id int [pk]
  name varchar
}

Table Category {
  id int [pk]
  name varchar
}

Table Book {
  id int [pk]
  title varchar
  author varchar
  isbn int
  cover_image_url varchar
  user_id int [ref: > User.id]
}

Table Review {
  id int [pk]
  book_id int [ref: > Book.id]
  user_id int [ref: > User.id]
  rating int
  comment text
  date_posted datetime
}

Table BookCategory {
  id int [pk]
  book_id int [ref: > Book.id]
  category_id int [ref: > Category.id]
  date_posted datetime
}

Ref: Book.user_id > User.id
Ref: Review.book_id > Book.id
Ref: Review.user_id > User.id
Ref: BookCategory.book_id > Book.id
Ref: BookCategory.category_id > Category.id